CS 352/Parser/SimpleC.java
/* SimpleC.java */
/* Generated By:JavaCC: Do not edit this line. SimpleC.java */
/** Simple brace matcher. */
public class SimpleC implements SimpleCConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    try {
        SimpleC parser = new SimpleC(System.in);
        parser.goal();
        System.out.println("Program compiled Successfully!");
        } catch (ParseException e) {
                System.out.println(e.currentToken.beginLine + ": Syntax Error");
        }
  }

  static final public void goal() throws ParseException {
    program();
    jj_consume_token(0);
  }

  static final public void program() throws ParseException {
    function_or_var_list();
  }

  static final public void function_or_var_list() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CHARSTARSTAR:
      case CHARSTAR:
      case LONGSTAR:
      case LONG:
      case DOUBLESTAR:
      case DOUBLE:
      case VOID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      var_type();
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPARENT:{
        function();
        break;
        }
      case COMMA:
      case SEMICOLON:{
        global_var();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void function() throws ParseException {
    jj_consume_token(LPARENT);
    arguments();
    jj_consume_token(RPARENT);
    compound_statement();
  }

  static final public void arg_list() throws ParseException {
    arg();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      arg();
    }
  }

  static final public void arguments() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHARSTARSTAR:
    case CHARSTAR:
    case LONGSTAR:
    case LONG:
    case DOUBLESTAR:
    case DOUBLE:
    case VOID:{
      arg_list();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  static final public void arg() throws ParseException {
    var_type();
    jj_consume_token(ID);
  }

  static final public void global_var() throws ParseException {
    global_var_list();
    jj_consume_token(SEMICOLON);
  }

  static final public void global_var_list() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
  }

  static final public void var_type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHARSTAR:{
      jj_consume_token(CHARSTAR);
      break;
      }
    case CHARSTARSTAR:{
      jj_consume_token(CHARSTARSTAR);
      break;
      }
    case DOUBLE:{
      jj_consume_token(DOUBLE);
      break;
      }
    case DOUBLESTAR:{
      jj_consume_token(DOUBLESTAR);
      break;
      }
    case LONG:{
      jj_consume_token(LONG);
      break;
      }
    case LONGSTAR:{
      jj_consume_token(LONGSTAR);
      break;
      }
    case VOID:{
      jj_consume_token(VOID);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void assignment() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LSQUARE:{
      jj_consume_token(LSQUARE);
      expression();
      jj_consume_token(RSQUARE);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(ASSIGN);
    expression();
  }

  static final public void call() throws ParseException {
    jj_consume_token(LPARENT);
    call_arguments();
    jj_consume_token(RPARENT);
  }

  static final public void call_arg_list() throws ParseException {
    expression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      expression();
    }
  }

  static final public void call_arguments() throws ParseException {
    call_arg_list();
  }

  static final public void expression() throws ParseException {
    logical_or_expr();
  }

  static final public void logical_or_expr() throws ParseException {
    logical_and_expr();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      jj_consume_token(OR);
      logical_and_expr();
    }
  }

  static final public void logical_and_expr() throws ParseException {
    equality_expr();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      jj_consume_token(AND);
      equality_expr();
    }
  }

  static final public void equality_expr() throws ParseException {
    relational_expr();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:
      case NOTEQUAL:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:{
        jj_consume_token(EQUAL);
        break;
        }
      case NOTEQUAL:{
        jj_consume_token(NOTEQUAL);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      relational_expr();
    }
  }

  static final public void relational_expr() throws ParseException {
    additive_expr();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESS:
      case GREAT:
      case LESSEQUAL:
      case GREATEQUAL:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESS:{
        jj_consume_token(LESS);
        break;
        }
      case GREAT:{
        jj_consume_token(GREAT);
        break;
        }
      case LESSEQUAL:{
        jj_consume_token(LESSEQUAL);
        break;
        }
      case GREATEQUAL:{
        jj_consume_token(GREATEQUAL);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      additive_expr();
    }
  }

  static final public void additive_expr() throws ParseException {
    multiplicative_expr();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADD:
      case SUBTRACT:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADD:{
        jj_consume_token(ADD);
        break;
        }
      case SUBTRACT:{
        jj_consume_token(SUBTRACT);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      multiplicative_expr();
    }
  }

  static final public void multiplicative_expr() throws ParseException {
    unary_expr();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:
      case DIVIDE:
      case PERCENT:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:{
        jj_consume_token(TIMES);
        break;
        }
      case DIVIDE:{
        jj_consume_token(DIVIDE);
        break;
        }
      case PERCENT:{
        jj_consume_token(PERCENT);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      unary_expr();
    }
  }

  static final public void unary_expr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPARENT:
    case ID:
    case STRING_CONST:
    case INTEGER_CONST:
    case DOUBLE_CONST:{
      primary_expr();
      break;
      }
    case AMPERSAND:
    case ADD:
    case SUBTRACT:
    case TIMES:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADD:{
        jj_consume_token(ADD);
        break;
        }
      case SUBTRACT:{
        jj_consume_token(SUBTRACT);
        break;
        }
      case AMPERSAND:{
        jj_consume_token(AMPERSAND);
        break;
        }
      case TIMES:{
        jj_consume_token(TIMES);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      unary_expr();
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void primary_expr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STRING_CONST:{
      jj_consume_token(STRING_CONST);
      break;
      }
    case ID:{
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPARENT:{
        call();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LSQUARE:{
          jj_consume_token(LSQUARE);
          expression();
          jj_consume_token(RSQUARE);
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          ;
        }
      }
      break;
      }
    case INTEGER_CONST:{
      jj_consume_token(INTEGER_CONST);
      break;
      }
    case DOUBLE_CONST:{
      jj_consume_token(DOUBLE_CONST);
      break;
      }
    case LPARENT:{
      jj_consume_token(LPARENT);
      expression();
      jj_consume_token(RPARENT);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void compound_statement() throws ParseException {
    jj_consume_token(LCURLY);
    statement_list();
    jj_consume_token(RCURLY);
  }

  static final public void statement_list() throws ParseException {
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CHARSTARSTAR:
      case CHARSTAR:
      case LONGSTAR:
      case LONG:
      case DOUBLESTAR:
      case DOUBLE:
      case VOID:
      case IF:
      case WHILE:
      case DO:
      case FOR:
      case CONTINUE:
      case BREAK:
      case RETURN:
      case LCURLY:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_11;
      }
      statement();
    }
  }

  static final public void local_var() throws ParseException {
    var_type();
    local_var_list();
    jj_consume_token(SEMICOLON);
  }

  static final public void local_var_list() throws ParseException {
    jj_consume_token(ID);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_12;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSQUARE:
      case ASSIGN:{
        assignment();
        break;
        }
      case LPARENT:{
        call();
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(SEMICOLON);
      break;
      }
    case CHARSTARSTAR:
    case CHARSTAR:
    case LONGSTAR:
    case LONG:
    case DOUBLESTAR:
    case DOUBLE:
    case VOID:{
      local_var();
      break;
      }
    case LCURLY:{
      compound_statement();
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPARENT);
      expression();
      jj_consume_token(RPARENT);
      statement();
      else_optional();
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPARENT);
      expression();
      jj_consume_token(RPARENT);
      statement();
      break;
      }
    case DO:{
      jj_consume_token(DO);
      statement();
      jj_consume_token(WHILE);
      jj_consume_token(LPARENT);
      expression();
      jj_consume_token(RPARENT);
      jj_consume_token(SEMICOLON);
      break;
      }
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(LPARENT);
      jj_consume_token(ID);
      assignment();
      jj_consume_token(SEMICOLON);
      expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(ID);
      assignment();
      jj_consume_token(RPARENT);
      statement();
      break;
      }
    case CONTINUE:
    case BREAK:
    case RETURN:{
      jump_statement();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void else_optional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      statement();
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      ;
    }
  }

  static final public void jump_statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONTINUE:{
      jj_consume_token(CONTINUE);
      jj_consume_token(SEMICOLON);
      break;
      }
    case BREAK:{
      jj_consume_token(BREAK);
      jj_consume_token(SEMICOLON);
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      return_val_opt();
      jj_consume_token(SEMICOLON);
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void return_val_opt() throws ParseException {
    expression();
  }

/**Root production. */
  static final public void Input() throws ParseException {int count;
    count = anytoken();
    jj_consume_token(0);
System.out.println("The number of tokens is " + count);
  }

  static final public int anytoken() throws ParseException {Token t;
  int count=0;
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPARENT:{
        t = jj_consume_token(LPARENT);
System.out.println("LPARENT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case RPARENT:{
        t = jj_consume_token(RPARENT);
System.out.println("RPARENT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LSQUARE:{
        t = jj_consume_token(LSQUARE);
System.out.println("LSQUARE, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case RSQUARE:{
        t = jj_consume_token(RSQUARE);
System.out.println("RSQUARE, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LCURLY:{
        t = jj_consume_token(LCURLY);
System.out.println("LCURLY, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case RCURLY:{
        t = jj_consume_token(RCURLY);
System.out.println("RCURLY, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case COMMA:{
        t = jj_consume_token(COMMA);
System.out.println("COMMA, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case SEMICOLON:{
        t = jj_consume_token(SEMICOLON);
System.out.println("SEMICOLON, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case ASSIGN:{
        t = jj_consume_token(ASSIGN);
System.out.println("ASSIGN, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case AMPERSAND:{
        t = jj_consume_token(AMPERSAND);
System.out.println("AMPERSAND, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case OR:{
        t = jj_consume_token(OR);
System.out.println("OR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case AND:{
        t = jj_consume_token(AND);
System.out.println("AND, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case EQUAL:{
        t = jj_consume_token(EQUAL);
System.out.println("EQUAL, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case NOTEQUAL:{
        t = jj_consume_token(NOTEQUAL);
System.out.println("NOTEQUAL, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LESS:{
        t = jj_consume_token(LESS);
System.out.println("LESS, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case GREAT:{
        t = jj_consume_token(GREAT);
System.out.println("GREAT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LESSEQUAL:{
        t = jj_consume_token(LESSEQUAL);
System.out.println("LESSEQUAL, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case GREATEQUAL:{
        t = jj_consume_token(GREATEQUAL);
System.out.println("GREATEQUAL, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case ADD:{
        t = jj_consume_token(ADD);
System.out.println("ADD, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case SUBTRACT:{
        t = jj_consume_token(SUBTRACT);
System.out.println("SUBTRACT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case TIMES:{
        t = jj_consume_token(TIMES);
System.out.println("TIMES, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case DIVIDE:{
        t = jj_consume_token(DIVIDE);
System.out.println("DIVIDE, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case PERCENT:{
        t = jj_consume_token(PERCENT);
System.out.println("PERCENT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case CHAR_CONST:{
        t = jj_consume_token(CHAR_CONST);
System.out.println("CHAR_CONST, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case STRING_CONST:{
        t = jj_consume_token(STRING_CONST);
System.out.println("STRING_CONST, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case INTEGER_CONST:{
        t = jj_consume_token(INTEGER_CONST);
System.out.println("INTEGER_CONST, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case DOUBLE_CONST:{
        t = jj_consume_token(DOUBLE_CONST);
System.out.println("DOUBLE_CONST, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case PRINTING_CHAR:{
        t = jj_consume_token(PRINTING_CHAR);
System.out.println("PRINTING_CHAR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case DIGIT:{
        t = jj_consume_token(DIGIT);
System.out.println("DIGIT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case OCTAL:{
        t = jj_consume_token(OCTAL);
System.out.println("OCTAL, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case HEX_DIGIT:{
        t = jj_consume_token(HEX_DIGIT);
System.out.println("HEX_DIGIT, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LETTER:{
        t = jj_consume_token(LETTER);
System.out.println("LETTER, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case OTHER_CHAR:{
        t = jj_consume_token(OTHER_CHAR);
System.out.println("OTHER_CHAR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case CHARSTARSTAR:{
        t = jj_consume_token(CHARSTARSTAR);
System.out.println("CHARSTARSTAR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case CHARSTAR:{
        t = jj_consume_token(CHARSTAR);
System.out.println("CHARSTAR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case DOUBLESTAR:{
        t = jj_consume_token(DOUBLESTAR);
System.out.println("DOUBLESTAR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case DOUBLE:{
        t = jj_consume_token(DOUBLE);
System.out.println("DOUBLE, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LONGSTAR:{
        t = jj_consume_token(LONGSTAR);
System.out.println("LONGSTAR, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case LONG:{
        t = jj_consume_token(LONG);
System.out.println("LONG, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case VOID:{
        t = jj_consume_token(VOID);
System.out.println("VOID, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case IF:{
        t = jj_consume_token(IF);
System.out.println("IF, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
      case ELSE:{
        t = jj_consume_token(ELSE);
System.out.println("ELSE, \u005c""+t.image+"\u005c"" ); count++;
        break;
        }
